Finalize full-stack evaluator project; added complete NOTES.md summary

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=taskmanagerdb;Username=postgres;Password=Postgresqlaaron01"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-  }
+  "AllowedHosts": "*"
 }
